# r0-template-verifier

./: .gitignore  Cargo.toml  justfile
host/: Cargo.toml
host/src/: main.rs
js/vite/: package-lock.json
js/vite/src/: demo.ts
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
verifier/: Cargo.toml
verifier-cli/: Cargo.toml
verifier-cli/src/: main.rs
verifier-js/: Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
verifier-js/src/: lib.rs
verifier/src/: bindings.rs  lib.rs
verifier/wit/: world.wit
