[package]
name = "verifier-js"
version = "0.1.0"
authors = ["Nuke <nukemandan@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bincode = "1.3.3"
risc0-zkvm = { version = "0.21.0", default-features = false }
methods = { path = "../methods" }
risc0-zkp = "0.21.0"
wasm-bindgen = { version = "0.2.92" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
