[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitflags = "2.5.0"
methods = { path = "../methods" }
risc0-zkp = "0.21.0"
risc0-zkvm = { version = "0.21.0", default-features = false }
wit-bindgen-rt = "0.23.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "risc0:utils"

[package.metadata.component.dependencies]
